# xpwd

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
bucket/: app.json  xpwd.json
homebrew/: xpwd.rb
resources/: dictionary.txt
src/: lib.rs  main.rs
